Fixed signup button overlap on vfcom menu and splash.

--- a/themes/vfcom/design/custom.css
+++ b/themes/vfcom/design/custom.css
@@ -412,7 +412,7 @@ body.Features .VFMenu a.Features{
 .Head .SignUpButton {
    position: absolute;
    top: 31px;
-   right: 422px;
+   right: 440px;
 }
 body.Conversations.add .FormWrapper,
 body.Vanilla.Post .FormWrapper {
